--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
-version = '1.16.3'
+version = '1.16.3-AuthenticEmma'
 group = 'com.github.dashiedev'
 archivesBaseName = "DoggyTalentsNext-${project.target_mc_version}"
 
@@ -24,9 +24,16 @@ sourceSets {
         runtimeClasspath += sourceSets.api.output
     }
 }
-
+ 
 tasks.named("processResources") {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+task apiJar(type: Jar) {
+    duplicatesStrategy(DuplicatesStrategy.FAIL)
+    archiveClassifier = 'api'
+    from sourceSets.api.output
+    from sourceSets.api.allJava
 }
 
 configurations {
